# AuditShield

./: .gitignore  Dockerfile  README.md  audit_logs.txt  docker-compose.yml  final_audit_capture.txt  final_test_log.txt  inference.py  logs.txt  openenv.yaml  pyproject.toml  requirements.txt  run_all_tasks.py  test_backend.py  test_backend_local.py  verify_hard_task.py
.kiro/specs/ap-resolve/: design.md  requirements.md  tasks.md
OpenEnv-main/envs/ap_resolve_env/: tasks_registry.py  workspace.py
OpenEnv-main/envs/ap_resolve_env/server/: Dockerfile
OpenEnv-main/envs/ap_resolve_env/tests/: test_grader.py  test_models.py  test_properties.py  test_reward_calculator.py  test_task_registry.py
envs/ap_resolve_env/: README.md  __init__.py  action_handler.py  env.py  grader.py  inference.py  models.py  openenv.yaml  reward.py  tasks_registry.py
envs/ap_resolve_env/tasks/: easy_straight_through.json  easy_valid_discount.json  hard_duplicate_partial.json  medium_mismatch.json  medium_partial_delivery.json
hf_space_deploy/: graders.py  space_README.md
hf_space_deploy/fixtures/: easy_straight_through.json  medium_mismatch.json
hf_space_deploy/server/: Dockerfile  ap_environment.py  app.py  requirements.txt
hf_space_deploy/tests/: test_app.py  test_document_workspace.py  test_environment.py
hf_space_deploy_v2/: Dockerfile
hf_space_deploy_v2/envs/ap_resolve_env/: action_handler.py  client.py  models.py  rewards.py
hf_space_deploy_v2/envs/ap_resolve_env/server/: app.py  (+1 more)
openenv_src/openenv_core.egg-info/: SOURCES.txt  requires.txt
server/: __init__.py  app.py
(+1 files in other folders)
